@@ -1,3 +1,6 @@
+  16 Sep 2012; Manuel Rüger (mrueg) gentoo@rueg.eu classifier-1.3.3.ebuild:
+  dev-ruby/classifier: Fix tests
+
   26 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu classifier-1.3.3.ebuild:
   dev-ruby/classifier: Drop some ruby targets
 
